Implement chapter caching

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -565,6 +565,7 @@
         <script src="js/ImageCollector.js"></script>
         <script src="js/Imgur.js"></script>
         <script src="js/ChapterUrlsUI.js"></script>
+        <script src="js/ChapterCache.js"></script>
         <script src="js/DefaultParserUI.js"></script>
         <script src="js/ProgressBar.js"></script>
         <script src="js/Parser.js"></script>
