--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -527,6 +527,7 @@
                     <th align="left">__MSG_column_Include__</th>
                     <th align="left">__MSG_column_Title__</th>
                     <th align="left" hidden="true">__MSG_column_URL__</th>
+                    <th align="left"></th>
                 </tr>
             </table>
             <div>
@@ -534,6 +535,14 @@
             </div>
             <button id="applyChangesButton2" hidden="true">__MSG_button_Apply_Changes__</button>
         </section>
+    </div>
+
+    <!-- Cached Chapter Viewer -->
+    <div id="cachedChapterViewer" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000;">
+        <div style="position: relative; width: 90%; height: 90%; margin: 5% auto; background: white; overflow: auto; padding: 20px; box-sizing: border-box;">
+            <button id="closeCachedViewer" style="position: absolute; top: 10px; right: 10px; font-size: 20px; cursor: pointer;">✕</button>
+            <div id="cachedChapterContent"></div>
+        </div>
     </div>
 
     <div id="sbOptions" class="sidebar">
