Add delete cached chapters option

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -527,7 +527,11 @@
                     <th align="left">__MSG_column_Include__</th>
                     <th align="left">__MSG_column_Title__</th>
                     <th align="left" hidden="true">__MSG_column_URL__</th>
-                    <th align="left"></th>
+                    <th align="left" style="width: 30px;">
+                        <img id="deleteAllCachedChapters" src="images/Trash3Fill.svg" 
+                             style="cursor: pointer; width: 20px; height: 20px; display: none;" 
+                             title="Delete all cached chapters on this page">
+                    </th>
                 </tr>
             </table>
             <div>
