--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -527,9 +527,8 @@
                     <th align="left">__MSG_column_Include__</th>
                     <th align="left">__MSG_column_Title__</th>
                     <th align="left" hidden="true">__MSG_column_URL__</th>
-                    <th align="left" style="width: 30px;">
+                    <th align="left" class="cacheViewColumn">
                         <img id="deleteAllCachedChapters" src="images/Trash3Fill.svg" 
-                             style="cursor: pointer; width: 20px; height: 20px; display: none;" 
                              title="Delete all cached chapters on this page">
                     </th>
                 </tr>
@@ -542,9 +541,9 @@
     </div>
 
     <!-- Cached Chapter Viewer -->
-    <div id="cachedChapterViewer" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000;">
-        <div style="position: relative; width: 90%; height: 90%; margin: 5% auto; background: white; overflow: auto; padding: 20px; box-sizing: border-box;">
-            <button id="closeCachedViewer" style="position: absolute; top: 10px; right: 10px; font-size: 20px; cursor: pointer;">✕</button>
+    <div id="cachedChapterViewer">
+        <div>
+            <button id="closeCachedViewer">✕</button>
             <div id="cachedChapterContent"></div>
         </div>
     </div>
