Move chapter viewer styles to separate CSS file

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>WebToEpub</title>
     <link href="css/default.css" rel="stylesheet" type="text/css" />
+    <link href="css/chapterViewer.css" rel="stylesheet" type="text/css" />
     <link href="css/autoDark.css" rel="stylesheet" type="text/css"  id="autoDark" />
     <link href="css/alwaysDark.css" rel="stylesheet" type="text/css" id="alwaysDark" disabled="true"/>
     <base />
