Add fixed title bar to chapter viewer popup
- Created fixed title bar with chapter title and close button
- Title bar stays at top while content scrolls below
- Used flexbox layout with title bar as flex-shrink: 0 and content as flex: 1
- Moved close button into title bar for better UX
- Title bar has light gray background to distinguish from content

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -545,7 +545,10 @@
     <!-- Cached Chapter Viewer -->
     <div id="cachedChapterViewer">
         <div>
-            <button id="closeCachedViewer">✕</button>
+            <div id="cachedChapterTitleBar">
+                <h2 id="cachedChapterTitle"></h2>
+                <button id="closeCachedViewer">✕</button>
+            </div>
             <div id="cachedChapterContent"></div>
         </div>
     </div>
