Move inline styles to CSS and add dynamic cache button text
- Moved cache modal inline styles to chapterViewer.css
- Added dynamic cache button text showing 'Caching Enabled/Disabled'
- Button text updates on popup load, modal open, and setting changes
- Removed style attributes from cacheRetentionDays and refreshCacheStatsButton
- Added CSS styling for clearAllCacheButton

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -571,14 +571,14 @@
                     <tr>
                         <td>Cache Retention (days)</td>
                         <td>
-                            <input id="cacheRetentionDays" type="number" name="cacheRetentionDays" value="30" min="1" max="365" style="width: 80px;">
+                            <input id="cacheRetentionDays" type="number" name="cacheRetentionDays" value="30" min="1" max="365">
                         </td>
                     </tr>
                     <tr>
                         <td>Cached Chapters</td>
                         <td>
                             <span id="cachedChapterCount">Loading...</span>
-                            <button id="refreshCacheStatsButton" style="margin-left: 10px;">Refresh</button>
+                            <button id="refreshCacheStatsButton">Refresh</button>
                         </td>
                     </tr>
                     <tr>
@@ -588,7 +588,7 @@
                     <tr>
                         <td></td>
                         <td>
-                            <button id="clearAllCacheButton" style="background-color: #dc3545; color: white;">Clear All Cache</button>
+                            <button id="clearAllCacheButton">Delete All Cached Chapters</button>
                         </td>
                     </tr>
                 </table>
