--- a/unitTest/Tests.html
+++ b/unitTest/Tests.html
@@ -32,6 +32,7 @@
     <script src="../plugin/js/ChapterUrlsUI.js"></script>
     <script src="../plugin/js/DefaultParserUI.js"></script>
     <script src="../plugin/js/ProgressBar.js"></script>
+    <script src="../plugin/js/ChapterCache.js"></script>
     <script src="../plugin/js/Parser.js"></script>
     <script src="../plugin/js/parsers/WordpressBaseParser.js"></script>
     <script src="../plugin/js/parsers/ActiveTranslationsParser.js"></script>
