Create separate ChapterViewer.js script

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -622,6 +622,7 @@
         <script src="js/ImageCollector.js"></script>
         <script src="js/Imgur.js"></script>
         <script src="js/ChapterUrlsUI.js"></script>
+        <script src="js/ChapterViewer.js"></script>
         <script src="js/ChapterCache.js"></script>
         <script src="js/DefaultParserUI.js"></script>
         <script src="js/ProgressBar.js"></script>
