Localize chapter caching feature text for translation support
- Used AI for translating languages I don't know - I tried
- Fix ESLint quote issues in ChapterViewer.js

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -156,7 +156,7 @@
             <div class="HiddenButtonSection">
                 <button id="hiddenBibButton">__MSG_button_Lib_Library__</button>
                 <button id="advancedOptionsButton">__MSG_button_Advanced_Options__</button>
-                <button id="cacheOptionsButton">Cache</button>
+                <button id="cacheOptionsButton">__MSG_button_Cache_Options__</button>
             </div>
             <section id="hiddenBibSection" hidden="true">
                 <div id="LibraryTemplate" hidden="true">
@@ -565,27 +565,27 @@
             <div id="cacheOptionsContent">
                 <table id="cacheOptionsTable">
                     <tr>
-                        <td>Enable Chapter Caching</td>
+                        <td>__MSG_label_Enable_Chapter_Caching__</td>
                         <td>
                             <input id="enableChapterCachingCheckbox" type="checkbox" name="enableChapterCachingCheckbox" checked="true">
                             <span id="toggleStateText">On</span>
                         </td>
                     </tr>
                     <tr>
-                        <td>Cache Retention (days)</td>
+                        <td>__MSG_label_Cache_Retention_Days__</td>
                         <td>
                             <input id="cacheRetentionDays" type="number" name="cacheRetentionDays" value="30" min="1" max="365">
                         </td>
                     </tr>
                     <tr>
-                        <td>Cached Chapter Count</td>
+                        <td>__MSG_label_Cached_Chapter_Count__</td>
                         <td>
                             <span id="cachedChapterCount">Loading...</span>
-                            <button id="clearAllCacheButton">Delete All Cached Chapters</button>
+                            <button id="clearAllCacheButton">__MSG_button_Delete_All_Cached_Chapters__</button>
                         </td>
                     </tr>
                     <tr>
-                        <td>Chapter Cache Size</td>
+                        <td>__MSG_label_Chapter_Cache_Size__</td>
                         <td><span id="cacheSize">Loading...</span></td>
                     </tr>
                 </table>
