Add tooltips for cache icons to replace slow browser title tooltips

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -532,8 +532,10 @@
                     <th align="left">__MSG_column_Title__</th>
                     <th align="left" hidden="true">__MSG_column_URL__</th>
                     <th align="left" class="cacheViewColumn">
-                        <img id="deleteAllCachedChapters" src="images/Trash3Fill.svg" 
-                             title="Delete all cached chapters on this page">
+                        <div class="trashIconWrapper">
+                            <img id="deleteAllCachedChapters" src="images/Trash3Fill.svg">
+                            <span class="tooltipText" id="deleteAllTooltip">Delete all cached chapters on this page</span>
+                        </div>
                     </th>
                 </tr>
             </table>
