--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -532,7 +532,7 @@
                     <th align="left">__MSG_column_Title__</th>
                     <th align="left" hidden="true">__MSG_column_URL__</th>
                     <th align="left" class="cacheViewColumn">
-                        <div class="trashIconWrapper">
+                        <div class="tooltip-wrapper tooltip-top">
                             <img id="deleteAllCachedChapters" src="images/Trash3Fill.svg">
                             <span class="tooltipText" id="deleteAllTooltip">Delete all cached chapters on this page</span>
                         </div>
