Renamed chaptersTable.css to chaptersUI.css

--- a/unitTest/Tests.html
+++ b/unitTest/Tests.html
@@ -29,7 +29,7 @@
     <script src="../plugin/js/ParserFactory.js"></script>
     <script src="../plugin/js/ImageCollector.js"></script>
     <script src="../plugin/js/Imgur.js"></script>
-    <script src="../plugin/js/ChapterUrlsUI.js"></script>
+    <script src="../plugin/js/ChaptersUI.js"></script>
     <script src="../plugin/js/DefaultParserUI.js"></script>
     <script src="../plugin/js/ProgressBar.js"></script>
     <script src="../plugin/js/ChapterCache.js"></script>
@@ -99,7 +99,7 @@
     <script src='UtestEpubItem.js'></script>
     <script src='UtestEpubMetaInfo.js'></script>
     <script src='UtestEpubPacker.js'></script>
-    <script src='UtestChapterUrlsUI.js'></script>
+    <script src='UtestChaptersUI.js'></script>
     <script src='UtestHttpClient.js'></script>
     <script src='UtestParser.js'></script>
     <script src="UtestActiveTranslationsParser.js"></script>
