--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>WebToEpub</title>
     <link href="css/default.css" rel="stylesheet" type="text/css" />
-    <link href="css/chaptersTable.css" rel="stylesheet" type="text/css" />
+    <link href="css/chaptersUI.css" rel="stylesheet" type="text/css" />
     <link href="css/modals.css" rel="stylesheet" type="text/css" />
     <link href="css/autoDark.css" rel="stylesheet" type="text/css"  id="autoDark" />
     <link href="css/alwaysDark.css" rel="stylesheet" type="text/css" id="alwaysDark" disabled="true"/>
@@ -627,7 +627,7 @@
         <script src="js/ParserFactory.js"></script>
         <script src="js/ImageCollector.js"></script>
         <script src="js/Imgur.js"></script>
-        <script src="js/ChapterUrlsUI.js"></script>
+        <script src="js/ChaptersUI.js"></script>
         <script src="js/ChapterViewer.js"></script>
         <script src="js/ChapterCache.js"></script>
         <script src="js/DefaultParserUI.js"></script>
