Combine cacheViewColumn and downloadStateDiv

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -535,10 +535,10 @@
                     <th align="left">__MSG_column_Include__</th>
                     <th align="left">__MSG_column_Title__</th>
                     <th align="left" hidden="true">__MSG_column_URL__</th>
-                    <th align="left" class="cacheViewColumn">
-                        <div class="tooltip-wrapper tooltip-top">
+                    <th align="left" class="chapterStatusColumn">
+                        <div class="tooltip-wrapper delete-all-tooltip clickable-icon">
                             <img id="deleteAllCachedChapters" src="images/Trash3Fill.svg">
-                            <span class="tooltipText" id="deleteAllTooltip">Delete all cached chapters on this page</span>
+                            <span class="tooltipText" id="deleteAllTooltip">__MSG_tooltip_Delete_All_Cached__</span>
                         </div>
                     </th>
                 </tr>
