Switch svg files to const strings for many reasons

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -537,7 +537,7 @@
                     <th align="left" hidden="true">__MSG_column_URL__</th>
                     <th align="left" class="chapterStatusColumn">
                         <div class="tooltip-wrapper delete-all-tooltip clickable-icon">
-                            <img id="deleteAllCachedChapters" src="images/Trash3Fill.svg">
+                            <span id="deleteAllCachedChapters"></span>
                             <span class="tooltipText" id="deleteAllTooltip">__MSG_tooltip_Delete_All_Cached__</span>
                         </div>
                     </th>
@@ -627,6 +627,7 @@
         <script src="js/ParserFactory.js"></script>
         <script src="js/ImageCollector.js"></script>
         <script src="js/Imgur.js"></script>
+        <script src="js/SvgIcons.js"></script>
         <script src="js/ChaptersUI.js"></script>
         <script src="js/ChapterViewer.js"></script>
         <script src="js/ChapterCache.js"></script>
