Add Library book Select option and ability to view chapters in viewer

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -189,6 +189,7 @@
                                     <button id="LibTemplateSearchNewChapter">__MSG_button_Lib_Template_Search_new_Chapters__</button>
                                     <button id="LibTemplateUpdateNewChapter">__MSG_button_Lib_Template_Update_new_Chapters__</button>
                                     <button id="LibTemplateDownload">__MSG_button_Lib_Template_Download_EPUB__</button>
+                                    <button id="LibTemplateSelectBook">__MSG_button_Lib_Template_Select_Book__</button>
                                     <label style="cursor: pointer;">
                                         <button id="LibTemplateMergeUploadButton" style="pointer-events: none;">__MSG_button_Lib_Template_Add_Chapter_from_different_EPUB__</button>
                                         <button id="LibTemplateEditMetadataButton">__MSG_button_Lib_Template_Edit_Metadata__</button>
