--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -533,7 +533,12 @@
             <div id="findingChapterUrlsMessageRow" class="i18n warning">__MSG_Searching_For_URLs_Please_Wait__</div>
             <table id="chapterUrlsTable" class="chapterlist">
                 <tr>
-                    <th align="left">__MSG_column_Include__</th>
+                    <th align="left">
+                      <div class="tooltip-wrapper">
+                        <span id="chapterSelectInfo"></span>
+                        <span class="tooltipText">Selected Chapters Will Be Included In EPUB, Downloaded, or Added to Library</span>
+                      </div>
+                    </th>
                     <th align="left">__MSG_column_Title__</th>
                     <th align="left" hidden="true">__MSG_column_URL__</th>
                     <th align="left" class="chapterStatusColumn">
