--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>WebToEpub</title>
     <link href="css/default.css" rel="stylesheet" type="text/css" />
-    <link href="css/chaptersUI.css" rel="stylesheet" type="text/css" />
+    <link href="css/chapterUrlsUI.css" rel="stylesheet" type="text/css" />
     <link href="css/modals.css" rel="stylesheet" type="text/css" />
     <link href="css/autoDark.css" rel="stylesheet" type="text/css"  id="autoDark" />
     <link href="css/alwaysDark.css" rel="stylesheet" type="text/css" id="alwaysDark" disabled="true"/>
@@ -493,7 +493,7 @@
                 <table id="imagesTable"></table>
             </div>
         </section>
-        <section id="outputSection" class="minWidth">
+        <section id="chaptersSection" class="minWidth">
             <div id="chapterSelectControlsDiv">
                 <table id="rangeSelectTable">
                     <tr id="rangeStartChapterRow">
@@ -536,7 +536,7 @@
                     <th align="left">
                       <div class="tooltip-wrapper">
                         <span id="chapterSelectInfo"></span>
-                        <span class="tooltipText">Selected Chapters Will Be Included In EPUB, Downloaded, or Added to Library</span>
+                        <span class="tooltipText">Selected chapters will be included for actions: Pack EPUB, Download Chapters, or Add to Library</span>
                       </div>
                     </th>
                     <th align="left">__MSG_column_Title__</th>
@@ -634,7 +634,7 @@
         <script src="js/ImageCollector.js"></script>
         <script src="js/Imgur.js"></script>
         <script src="js/SvgIcons.js"></script>
-        <script src="js/ChaptersUI.js"></script>
+        <script src="js/ChapterUrlsUI.js"></script>
         <script src="js/ChapterViewer.js"></script>
         <script src="js/ChapterCache.js"></script>
         <script src="js/DefaultParserUI.js"></script>
