--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -531,17 +531,17 @@
             <button id="applyChangesButton" hidden="true">__MSG_button_Apply_Changes__</button>
             <p id="editURLsHint" class="i18n" hidden="true">__MSG_label_Edit_URLs_Hint__</p>
             <div id="findingChapterUrlsMessageRow" class="i18n warning">__MSG_Searching_For_URLs_Please_Wait__</div>
-            <table id="chapterUrlsTable" class="chapterlist">
+            <table id="chapterUrlsTable">
                 <tr>
-                    <th align="left">
+                    <th>
                       <div class="tooltip-wrapper">
                         <span id="chapterSelectInfo"></span>
                         <span class="tooltipText">Selected chapters will be included for actions: Pack EPUB, Download Chapters, or Add to Library</span>
                       </div>
                     </th>
-                    <th align="left">__MSG_column_Title__</th>
-                    <th align="left" hidden="true">__MSG_column_URL__</th>
-                    <th align="left" class="chapterStatusColumn">
+                    <th>__MSG_column_Title__</th>
+                    <th hidden="true">__MSG_column_URL__</th>
+                    <th class="chapterStatusColumn">
                         <div class="tooltip-wrapper delete-all-tooltip clickable-icon">
                             <span id="deleteAllCachedChapters"></span>
                             <span class="tooltipText" id="deleteAllTooltip">__MSG_tooltip_Delete_All_Cached__</span>
