--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -475,9 +475,7 @@
                     </tr>
                 </table>
             </section>
-
         </section>
-        <section id="testSection"></section>
         <section id="imageSection" hidden="true">
             <table id="imageOptionsTable">
                 <tr id="duplicateImagesRow">
@@ -494,7 +492,7 @@
             </div>
         </section>
         <section id="chaptersSection" class="minWidth">
-            <div id="chapterSelectControlsDiv">
+            <div id="chapterSelectControlsDiv" class="chapter-section-padding">
                 <table id="rangeSelectTable">
                     <tr id="rangeStartChapterRow">
                         <td>__MSG_label_Range_Start_Chapter__</td>
@@ -528,31 +526,35 @@
                     <button id="copyUrlsToClipboardButton">__MSG_button_Copy_Urls_To_Clipboard__</button>
                 </div>
             </div>
-            <button id="applyChangesButton" hidden="true">__MSG_button_Apply_Changes__</button>
-            <p id="editURLsHint" class="i18n" hidden="true">__MSG_label_Edit_URLs_Hint__</p>
-            <div id="findingChapterUrlsMessageRow" class="i18n warning">__MSG_Searching_For_URLs_Please_Wait__</div>
-            <table id="chapterUrlsTable">
-                <tr>
-                    <th>
+            <div class="chapter-section-padding">
+              <button id="applyChangesButton" hidden="true">__MSG_button_Apply_Changes__</button>
+              <p id="editURLsHint" class="i18n" hidden="true">__MSG_label_Edit_URLs_Hint__</p>
+              <div id="findingChapterUrlsMessageRow" class="i18n warning">__MSG_Searching_For_URLs_Please_Wait__</div>
+            </div>
+            <div id="chapterUrlsTable" class="chapter-list">
+                <div class="chapter-list-header">
+                    <div class="chapter-checkbox-column">
                       <div class="tooltip-wrapper">
                         <span id="chapterSelectInfo"></span>
                         <span class="tooltipText">Selected chapters will be included for actions: Pack EPUB, Download Chapters, or Add to Library</span>
                       </div>
-                    </th>
-                    <th>__MSG_column_Title__</th>
-                    <th hidden="true">__MSG_column_URL__</th>
-                    <th class="chapterStatusColumn">
+                    </div>
+                    <div class="chapter-title-column i18n">__MSG_column_Title__</div>
+                    <div class="chapter-url-column i18n" hidden="true">__MSG_column_URL__</div>
+                    <div class="chapter-status-column">
                         <div class="tooltip-wrapper delete-all-tooltip clickable-icon">
                             <span id="deleteAllCachedChapters"></span>
                             <span class="tooltipText" id="deleteAllTooltip">__MSG_tooltip_Delete_All_Cached__</span>
                         </div>
-                    </th>
-                </tr>
-            </table>
-            <div>
-                <textarea id="editChaptersUrlsInput" class="allSpace" cols="200" rows="20" hidden="true"></textarea>
+                    </div>
+                </div>
             </div>
-            <button id="applyChangesButton2" hidden="true">__MSG_button_Apply_Changes__</button>
+            <div class="chapter-section-padding">
+              <div>
+                <textarea id="editChaptersUrlsInput" class="allSpace" cols="200" rows="20" hidden="true"></textarea>
+              </div>
+              <button id="applyChangesButton2" hidden="true">__MSG_button_Apply_Changes__</button>
+            </div>
         </section>
     </div>
 
