Localize recently added text and organize a bit

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -536,7 +536,7 @@
                     <div class="chapter-checkbox-column">
                       <div class="tooltip-wrapper">
                         <span id="chapterSelectInfo"></span>
-                        <span class="tooltipText">Selected chapters will be included for actions: Pack EPUB, Download Chapters, or Add to Library</span>
+                        <span class="tooltipText i18n">__MSG_tooltip_Chapter_Selection__</span>
                       </div>
                     </div>
                     <div class="chapter-title-column i18n">__MSG_column_Title__</div>
