--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -519,8 +519,10 @@
                     </tr>
                 </table>
                 <div>
-                    <button id="selectAllUrlsButton">__MSG_button_Select_All__</button>
-                    <button id="unselectAllUrlsButton">__MSG_button_Unselect_All__</button>
+                    <label>
+                        <input id="selectAllUrlsCheckbox" type="checkbox" />
+                        <span class="i18n">__MSG_button_Select_All__</span>
+                    </label>
                     <button id="reverseChapterUrlsOrderButton">__MSG_button_Reverse_Chapter_Urls_Order__</button>
                     <button id="editChaptersUrlsButton">__MSG_button_Edit_Chapter_Urls__</button>
                     <button id="copyUrlsToClipboardButton">__MSG_button_Copy_Urls_To_Clipboard__</button>
