Click cover image to view full size

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -641,6 +641,19 @@
         </div>
     </div>
 
+    <!-- Cover Image Modal -->
+    <div id="coverImageModal" class="modal-backdrop">
+        <div class="modal-container cover-modal">
+            <div class="modal-title-bar">
+                <h2 class="modal-title">Cover Image</h2>
+                <button id="closeCoverImage" class="modal-close">✕</button>
+            </div>
+            <div class="cover-modal-content">
+                <img id="fullSizeCoverImg" />
+            </div>
+        </div>
+    </div>
+
     <div id="sbOptions" class="sidebar">
         <div width="100%" id="sbClose" class="closebtn">&#x274c;</div>
         <section id="sbFilters" hidden="true">
