Implement epub file structure as user preference

--- a/plugin/popup.html
+++ b/plugin/popup.html
@@ -427,6 +427,15 @@
                     <td><input id="createEpub3Checkbox" type="checkbox" name="createEpub3Checkbox" value="false"></td>
                     <td>__MSG_label_Create_Epub_3__</td>
                 </tr>
+                <tr id="epubInternalStructureRow">
+                    <td>__MSG_label_EPUB_Internal_Structure__</td>
+                    <td>
+                        <select id="epubInternalStructureSelect">
+                            <option value="OEBPS">OEBPS (Legacy)</option>
+                            <option value="EPUB">EPUB (Modern)</option>
+                        </select>
+                    </td>
+                </tr>
                 <tr id="useFullTitleAsFileName">
                     <td><input id="useFullTitleAsFileNameCheckbox" type="checkbox" name="useFullTitleAsFileNameCheckbox" value="false"></td>
                     <td>__MSG_label_Use_Full_Title_As_File_Name__</td>
